# rug-gmpmee

./: Cargo.toml  README.md
benches/: fpowm.rs  spowm.rs
src/: fpowm.rs  lib.rs  miller_rabin.rs  spown.rs
