[package]
name = "rug-gmpmee"
version = "0.1.3"
edition = "2021"
categories = ["mathematics", "cryptography"]
description = "Rust FFI bindings for GMPMEE"
documentation = "https://docs.rs/rug-gmpmee"
keywords = ["bignum", "gmp", "gmpmee", "math", "numerics"]
license = "LGPL-3.0+"
readme = "README.md"
repository = "https://github.com/de-mo/rug-gmpmee"
rust-version = "1.83"

[dependencies]
gmpmee-sys = "0.1.2"
#gmpmee-sys = { path = "../gmpmee-sys" }
rug = { version = "1", features = ["rand"] }
thiserror = "2"

[dev-dependencies]
rug-miller-rabin = "0.1"
rayon = "1"
criterion = "0.6"

[[bench]]
name = "spowm"
harness = false

[[bench]]
name = "fpowm"
harness = false
